tests/NormalTests/paczka1/small_fuzzy/81698486.err
Error in line 5: 8huYd0Vjrb0 A815 33,7
Error in line 8: 0KqS A815 51,0
Error in line 12: 0alw81X A574 75,7
Error in line 6: 8huYd0Vjrb0 A574 4,9
